--- a/smacofNM/smacofNM.Rmd
+++ b/smacofNM/smacofNM.Rmd
@@ -50,48 +50,192 @@ at <https://github.com/deleeuw/smacofExamples>.
 pick and rank
 
 # Loss Function
-$$
-\sigma(X,\Delta_1,\cdots,\Delta_s)=\frac{\sum_{r=1}^s\sum_{i,j} w_{ijr}(\delta_{ijr}-d_{ij}(X))^2}{\sum_{r=1}^s\sum_{i,j} w_{ijr}d_{ij}^2(X))}
-$$
-which must be minimized over $X$ and over $\delta_r\in\mathcal{K}_r$, with $\mathcal{K}_r$ pointed polyhedral convex cones, defined by a partial order 
-$\leq_r$.
 
-We assume $\omega_{ijr}=w_{ij}\epsilon_{ijr}$ where
-$\epsilon_{ijr}=1$ if pair $(i,j)$ is in presentation
-$r$ and $\epsilon_{ijr}=1$ otherwise.
+We start with a general non-metric MDS problem. The formulas for the general case are simpler than those for the various special cases implemented
+in smacofNM.
 
-Minimize of $X$ for given $\delta_{ijr}$. 
-$$
-\sigma_R(X,\Delta_1,\cdots,\Delta_s)=\sum_{r=1}^s\sum_{i,j} w_{ijr}\delta_{ijr}^2-2\sum_{r=1}^s\sum_{i,j} w_{ijr}\delta_{ijr}d_{ij}(X)+\sum_{r=1}^s\sum_{i,j} w_{ijr}d_{ij}^2(X))
-$$
-Nor use the basic smacof inequality
-$$
-d_{ij}(X)\geq\frac{1}{d_{ij}(Y)}\text{tr}\ X'A_{ij}Y 
-$$
+The loss function is
+\begin{equation}
+\sigma(X,\Delta_1,\cdots,\Delta_s):=\sum_{r=1}^R\sigma_r(X,\Delta_r),
+(\#eq:stressdef)
+\end{equation}
+with
+\begin{equation}
+\sigma_r(X,\Delta_r):=\sum_{i=1}^n\sum_{j=1}^n w_{ijr}(\delta_{ijr}-d_{ij}(X))^2.
+(\#eq:rstressdef)
+\end{equation}
+As usual, the symbol $:=$ is used for definitions. 
+
+The *weights* $W_r=\{w_{ijr}\}$ are known non-negative
+numbers and $D(X):=\{d_{ij}(X)\}$ is a matrix of Euclidean distances
+between the rows of the $n\times p$ *configuration* $X=\{x_{is}\}$, which are interpreted as $n$ points in $\mathbb{R}^p$.
+
+Loss function \@ref(eq:stressdef) must be minimized over *configurations* $X$ and over the $K$ matrices of *disparities* $\Delta_r=\{\delta_{ijr}\}$. The minimization problem has some constraints, both on $X$ and on the $\Delta_r$.
+We require that $X\in\mathcal{X}\subseteq\mathbb{R}^{n\times p}$. Here $\mathcal{X}$ is the set of *column-centered* (columns add up to zero) $n\times p$ matrices that are *normalized* by
+\begin{equation}
+\sum_{i=1}^n\sum_{j=1}^n w_{ij}^\star d_{ij}^2(X))=1,
+(\#eq:xscale)
+\end{equation}
+where
+\begin{equation}
+w_{ij}^\star:=\sum_{r=1}^R w_{ijr}.
+(\#eq:wstardef)
+\end{equation}
+
+The *disparities* $\Delta_r=\{\delta_{ijr}\}$ are required to satisfy $\Delta_r\in\mathcal{C}_r$. The $\mathcal{C}_r$ are polyhedral convex cones, which are subcones of the cone of non-negative matrices.  Each of the cones is defined by partial orders $\leq_r$ over the elements of the $\Delta_r$. In general, neither the (known) weight matrices $W_r$ nor the (unknown) disparity matrices $\Delta_r$ need to be symmetric and/or hollow (i.e. have zero diagonal). 
+
+The *data* of the MDS problem are the weights $W_r$ and the cones $\mathcal{C}_r$. Each pair $(W_r,\mathcal{C}_r)$ is called a *slice* of the data. The *unknowns* or *parameters* of the problem are $X\in\mathcal{X}$ and the $\Delta_r\in\mathcal{C}_r$.
+
+
+
+
+# Algorithm
+
+## Initial Configuration
+
+In smacofBS and smacofAC the default initial configuration is the
+classical Torgerson metric MDS solution. That is not available for
+smacofNM, because there are no numerical dissimilarities. In
+@deleeuw_R_70a (section 5.1) and @deleeuw_B_74 (chapter 4) a different eigenvalue-eigenvector based initial solution is proposed. We discuss a somewhat modernized version here. It is sometime known as the 
+*maximum sum method*.
+
+Let us interpret our data as an order over a number of pairs of pairs. For purposes of the initial configuration triads, propellors, and rank orders are also coded as pairs of pairs. 
+Consider
+\begin{equation}
+\omega(X):=\mathop{\sum\sum}_{(i,j)\prec(k,l)}(d_{ij}^2(X)-d_{kl}^2(X)),
+(\#eq:omegadef)
+\end{equation}
+where $(i,j)\prec(k,l)$ means that we want $d_{ij}(X)\leq d_{kl}(X)$.
+We want all terms in $\omega(X)$ to be positive, but for purposes of
+the initial configuration we relax this to wanting their sum to be 
+large. This explains the "maximum sum" label.
+
+The sum \@ref(eq:omegadef) can be written as the quadratic form
+$\omega(X)=\text{tr}\ X'A^\star X,$
+with
+\begin{equation}
+A^\star:=\left\{\sum_{(i,j)}\sum_{(k,l)}(A_{ij}-A_{kl})\right\} 
+(\#eq:astardef)
+\end{equation}
+Note that $A^\star$ is symmetric and doubly-centered. Moreover
+its trace is zero, and consequently it has one zero, some negative, 
+and some positive eigenvalues.
+
+
+Because $X$ is column centered we have
+$\omega(X)=\text{tr}\ X'(A^\star + \theta J)X$ where $J$ is the
+centering matrix $I-n^{-1}ee'$ and $\theta$ is arbitrary. For
+the non-zero eigenvalues we have
+$\lambda_s(A^\star + \theta J))=\lambda_s(A^\star) + \theta,$
+and thus for $\theta\geq-\lambda_{\text{min}}(A^\star)$ the matrix $A^\star + \theta J$ is positive semi-definite.
+
+Of course maximizing $\omega$ over all $X$ does not make sense, because
+by making $X$ larger we make $\omega$ larger. Thus the supremum over all
+$X$ is $+\infty$ and the maximum is not attained. We need some
+kind of normalization. The obvious choice is $\text{tr}\ X'X=1$, but
+unfortunately that does not work. It gives a rank-one solution
+with all columns of $X$ equal to the eigenvector corresponding with the
+dominant eigenvalue of $A^\star$. Instead we use $\text{tr}\ (X'X)^2=1$.
+This gives the solution $X=K\Lambda^\frac12$ with $\Lambda$ the largest $p$ eigenvalues of $A^\star$ (assumed to be non-negative) and $K$ the
+corresponding normalized eigenvectors. This is our version of
+the Torgerson initial solution for non-metric MDS.
+
+We have been deliberately vague about what to do if the number of
+positive eigenvalues of $A^\star$ is less than $p$, which is of
+course a problem the Torgerson metric MDS solution has as well. In the
+program we simply choose $\theta$ equal to $-\lambda_p(A^\star)$
+if $\lambda_p(A^\star)<0$. We expect the problem to be rare, and
+the actual choice of $\theta$ to be fairly inconsequential. 
+
+## The Iterations
+
+As in other smacof implementations our minimization method is based on the *alternating least squares* principle. Start
+iteration $\nu=0$ with the initial normalized configuration $X^{(0)}$. We do not need an initial $(\Delta_1^{(0)},\cdots,\Delta_1^{(0)})$. Then in each iteration $\nu$ we improve the configuration and the disparities by solving two subproblems. They are
+\begin{align}
+\text{Step  }\nu.1:\quad&\text{For }k=1,\cdots,K\text{ set } \Delta_r^{(\nu+1)}=\mathop{\text{argmin}}_{\Delta_r\in\mathcal{C}_r}\sigma_r(X^{(\nu)},\Delta_r),(\#eq:alsprob1)\\
+\text{Step  }\nu.2:\quad&\text{select }X^{(\nu+1)}\text{ from }\mathop{\text{argmin}}_{X\in\mathcal{X}}\sigma(X,\Delta_1^{(\nu+1)},\cdots,\Delta_s^{(k+1)}).(\#eq:alsprob2)
+\end{align}
+
+## First Subproblem
+
+In formulating the first subproblem \@ref(eq:alsprob1) we have used the fact that the projections on the cones $\mathcal{C}_r$ can be carried out separately for each $k$. We also know that the projections exist and are unique.
+
+## Second Subproblem
+
+To minimize loss over $X\in\mathcal{X}$ for the current best value of the $\Delta_r$. This subproblem is simplified by using the least squares partitioning
+\begin{equation}
+\sigma(X,\Delta_1,\cdots,\Delta_s)=\sum_{r=1}^R\sum_{i=1}^n\sum_{j=1}^nw_{ijr}(\delta_{ijr}-\delta_{ij}^\star)^2+\sum_{i=1}^n\sum_{j=1}^nw_{ij}^\star(\delta_{ij}^\star-d_{ij}(X))^2,
+(\#eq:stresspart)
+\end{equation}
+where
+\begin{equation}
+\delta_{ij}^\star=\frac{\sum_{r=1}^R w_{ijr}\delta_{ijr}}{\sum_{r=1}^R w_{ijr}}.
+(\#eq:deltastardef)
+\end{equation}
+
+Minimizing over $X$ can be done by minimizing the second term on the right in
+\@ref(eq:stresspart), which is a standard metric smacof problem. But unfortunately there is no closed form solution for this problem, and the
+minimizer must be computed by an infinite iterative process. Of course
+we do not want to have an infinite iterative process with the infinite alternating least square process, and thus we truncate the minimizations
+in the second subproblem. Although the resulting algorithm is not
+strictly of the form \@ref(eq:alsprob1)-\@ref(eq:alsprob2) any more, it does
+decrease the loss function in each iteration and consequently
+produces a stable and convergent algorithm. Since the smacof iterations
+use majorization (or MM), our overall algorithm combines alternating
+least squares and majorization.
+
+
+
+# Special Cases
+
+## Slice-Independence
+
+We will assume throughout that $w_{ijr}=w_{ij}\epsilon_{ijr}$, where
+$\epsilon_{ijr}=1$ is either zero or one. If $\epsilon_{ijr}$ is one, we say that pair $(i,j)$ *participates* in slice $r$. Thus $\epsilon_{ijr}=0$ for all pairs that do not particpate. We refer to the assumption $w_{ijr}=w_{ij}\epsilon_{ijr}$ on the weights as the *slice-independent* case.
+
+To see the consequences of slice-independence for our equations
+we define
+\begin{equation}
+\mathcal{I}_r:=\{(i, j)\mid \epsilon_{ijr}= 1\}
+(\#eq:irdef)
+\end{equation}
 so that
-$$
-\sum_{r=1}^s\sum_{i,j} w_{ijr}\delta_{ijr}d_{ij}(X)\geq
-\text{tr}\ X'B(Y)Y
-$$
-$$
-B(Y):=\sum_{r=1}^s\sum_{i,j} w_{ijr}\frac{\delta_{ijr}}{d_{ij}(Y)}A_{ij}
-$$
-Also
-$$
-V:=\sum_{r=1}^s\sum_{i,j} w_{ijr}A_{ij}
-$$
-So that
-$$
-\sigma_R(X)\leq K-2\text{tr}\ X'B(Y)Y+\text{tr}\ X'VX
-$$
-and the smacof update over $X$ with $\text{tr}\ X'VX=1$ is the same 
-as in smacofRR.
+\begin{equation}
+\sigma_r(X,\Delta_1,\cdots,\Delta_s)=\sum_{(i,j)\in\mathcal{I}_r} w_{ij}(\delta_{ijr}-d_{ij}(X))^2
+(\#eq:stressdefred)
+\end{equation}
 
-# Paired Comparisons
+Equation \@ref(eq:wstardef) gives $w_{ij}^\star=w_{ij}\epsilon_{ij}^\star,$
+where $\epsilon_{ij}^\star$ is the number of times pair $(i,j)$ occurs in
+the $R$ slices. A set of slices is *balanced* if all $\epsilon_{ij}^\star$ are equal. Also, from \@ref(eq:deltastardef), 
+\begin{equation}
+\delta_{ij}^\star=\frac{\sum_{r=1}^R \epsilon_{ijr}\delta_{ijr}}{\sum_{r=1}^R \epsilon_{ijr}}
+(\#eq:deltastarsimp)
+\end{equation}
+which does not depend on the $w_{ij}$.
+
+It follows that in our computations we have to deal with various
+different sets of weights. There are the $w_{ijr}$, the $w_{ij}^\star$,
+the $w_{ij}$, and the $\epsilon_{ij}^\star$. In the first ALS subproblem
+where we minimize over the $\Delta_r$ for fixed $X$ we use
+equation \@ref(eq:stressdefred), i.e. we use the $w_{ij}$. If we minimize over $X$ for fixed $\Delta_r$ we use \@ref(eq:stresspart), which means we
+use $w_{ij}^\star=w_{ij}\epsilon_{ij}^\star$ and $\delta_{ij}^\star$
+given by \@ref(eq:deltastarsimp). Of course this all simplifies dramatically
+if $w_{ij}=1$ for all pairs $(i,j)$ (the *unweighted* case).
+
+## Rank Order
+
+Ordinary non-metric multidimensional scaling is the special case in which
+there is only one slice ($R=1$) and the cone $\mathcal{C}$ is the isotone cone (possibly with provisions for ties). We have $\epsilon_{ij}=\epsilon_{ij}^\star=1$ for all
+$(i,j)$, and thus $w_{ij}^\star=w_{ij}$. There is only a single sets of weights we have to deal with, same as in smacofBS and smacofAC. 
+
+Finding the optimum $\Delta$ for given $X$ is a single monotone regression
+problem, possibly using the primary or secondary approach to ties (@deleeuw_A_77).
+
+## Paired Comparisons
 
 THe paired comparison method of data collection is the simplest and
-the most basic one of the Cartwheel methods.
-
+the most basic one of the cartwheel methods.
 
 Positive Orthant / Absolute Value / Pairwise
 
@@ -102,35 +246,43 @@ Positive Orthant / Absolute Value / Pairwise
 @johnson_73
 
 
-Suppose datum $r$ says that that $(i,j)<(k,l)$. Then $w_{ijr}$ and $w_{klr}$
-are non-zero and all other elements of $W_r$ are zero.
-Thus
+Suppose datum $r$ says that that $(i,j)\prec(k,l)$. In the slice independent case $w_{ijr}=w_{ij}$ and $w_{klr}=w_{kl}$
+can be non-zero and all other elements of $W_r$ are zero. 
+
+Use $w_{(i,j)_r}$
+If $(i,j)\prec(k,l)$
 $$
-w_{ijr}(\delta_{ijr}-d_{ij})^2+w_{klr}(\delta_{klr}-d_{kl})^2
+\sigma_r(X,\Delta_r)=w_{ij}(\delta_{ijr}-d_{ij})^2+w_{kl}(\delta_{klr}-d_{kl})^2
 $$
 Must be minimized over $\delta_{ijr}\leq\delta_{klr}$. If $d_{ij}\leq d_{kl}$
 then $\hat d_{ijr}=d_{ij}$ and $\hat d_{klr}=d_{kl}$, and otherwise
 $$
-\hat d_{ijr}=\hat d_{klr}=\frac{w_{ijr}d_{ij}+w_{klr}d_{kl}}{w_{ijr}+w_{klr}}
+\hat d_{ijr}=\hat d_{klr}=\frac{w_{ij}d_{ij}+w_{kl}d_{kl}}{w_{ij}+w_{kl}}
 $$
  Thus
 
-$$w_{ijr}(\hat d_{ijr}-d_{ij})^2+w_{klr}(\hat d_{klr}-d_{kl})^2$$
+$$w_{ij}(\hat d_{ijr}-d_{ij})^2+w_{kl}(\hat d_{klr}-d_{kl})^2$$
 is zero if the order of $d_{ij}$ and $d_{kl}$ is the same as the order in the data
 and 
 
 $$
-\frac{w_{ijr}w_{klr}}{w_{ijr}+w_{klr}}(d_{ij}-d_{kl})^2
+\frac{w_{ij}w_{kl}}{w_{ij}+w_{kl}}(d_{ij}-d_{kl})^2
+$$
+Also
+
+$$w_{ij}(\hat d_{ijr}-d_{ij})^2+w_{kl}(\hat d_{klr}-d_{kl})^2=$$
+$$
+w_{ij}\hat d_{ijr}^2+w_{kl}\hat d_{klr}^2+\\
+-2w_{ij}\hat d_{ijr}d_{ij}-2w_{kl}\hat d_{klr}d_{kl}+
 $$
 
 So far we have only considered the forced-choice situation in which
-the subject has to choose one of the pairs. If we allow for the alternative
-that $(i,j)$ and $(k,l)$ are equally similar then we can choose between two approaches. In the *primary approach* we incur no loss for this pair, no matter what $d_{ij}(X)$ and $d_{kl}(X)$ are. In the *secondary approach* we require that $\delta_{ijr}=\delta_{klr}$ and consequently we add to the loss if
+the subject has to choose one of the two pairs. If we allow for the alternative that $(i,j)$ and $(k,l)$ are equally similar then we can choose between two different approaches. In the *primary approach* we incur no loss for this pair, no matter what $d_{ij}(X)$ and $d_{kl}(X)$ are. In the *secondary approach* we require that $\delta_{ijr}=\delta_{klr}$ and consequently we use ... and add to the loss if
 $d_{ij}X)\not= d_{kl}(X)$.
 
 
 
-# Triads
+## Triads
 
 We have implemented three different versions of the method of triads, in which stimuli are presented three at a time,
 at the corners of an equilateral triangle, as in
@@ -143,6 +295,8 @@ three similarities between them. More precisely we ask for the two pairs with th
 and we interpret the responses as giving us a rank order.
 @coombs_54 calls this the *method of similarities*,
 and @torgerson_58 calls it the *complete method of triads*.
+
+## Propellors
 
 The second method was first proposed by @richardson_38,
 as the *method of triadic combinations*. Every triad is presented three times using a layout that is slightly dfferent from the complete method of triads. 
@@ -170,529 +324,13 @@ balanced design, as in @levelt_vandegeer_plomp_66.
 
 
 
-# Conditional Rank Orders -- Klingberg
+## Conditional Rank Orders -- Klingberg
 
-# Full Rank Orders
+# Data Collection Programs
 
-
-# A Paired Comparison Example
-
-```{r read, echo = FALSE}
-source("../../smacofExamples/parties/parties.R")
-source("../../smacofCode/smacofNM/smacofNMforPairs.R")
-```
-
-The objects that we want to scale are 10 Dutch political parties. 
-```{r}
-parties
-```
-
-There is only one subject, and it is me. I used the program  `smacofMakeRandomPairs()` to generate
-and present to me 50 random pairs of pairs $(i,j)$ and $(k,l)$. One such pair looks like
-```{r apair, echo = FALSE, fig.align = "center"}
-source("../../smacofCode/smacofNM/smacofMakeData.R")
-smacofMakeRandomPairs(parties, 1)
-```
-In Rstudio the graphics are in the plot window, the text is in the console. If
-you run R from the terminal the text will be in the terminal, and the graphics will
-be in the R graphics device for the session.
-
-It took me about
-5 minutes to make the 50 binary choices, duly recorded by the program. I left The Netherlands almost 40 years ago, so I am far from an expert on Dutch politics, so
-my choices may be far off the mark.
-
-The data, with the four indices first and then the choice, are
-```{r partiesdata, echo = FALSE}
-names(partiesData) <- c("i", "j", "k", "l", "")
-partiesData
-```
-Thus in the first row I say that the pair $(8,5)$ is more similar than $(2,9)$, in other words (`r c(parties[8],parties[5])`) is more similar than (`r c(parties[2],parties[9])`).
-
-In order to start the iterative process we need an initial configuration. Insipred by @degruijter_67 I used
-the infamous left-right horseshoe.
-```{r partiesxold, echo = FALSE, fig.align = "center"}
-par(pty = "s")
-plot(partiesXold, type = "n", xlab = "dim1", ylab = "dim2")
-text(partiesXold, parties, col = "RED")
-```
-```{r}
-source("../../smacofCode/smacofNM/smacofNMforPairs.R")
-partiesResult <- smacofNMforPairs(partiesData, partiesXold, 
-                                  eps = 1e-15, itmax = 1000, verbose = FALSE)
-```
-We have nice smooth monotone convergence. The convergence criterion is reached
-in `r partiesResult$itel` iterations and the stress is `r partiesResult$loss`, i.e.
-practically zero. Thus we have actually found a solution to the system of
-50 nonlinear inequalities defined by the data. This means two things. In the
-first place I am consistent in my choices, and in the second place the solution
-is undoubtedly far from unique. The map is
-```{r partiesxnew, echo = FALSE, fig.align = "center"}
-par(pty = "s")
-plot(partiesResult$x, type = "n", xlab = "dim1", ylab = "dim2")
-text(partiesResult$x, parties, col = "RED")
-```
-We are still reasonably close to the horseshoe, showing the influence of the
-initial configuration. Of course the main reason for the non-uniqueness is
-not the consistency of my choices, but the fact that we have used only 50
-pairs from the `choose(choose(10, 2), 2)` = `r choose(choose(10,2), 2)` possible 
-ones. The solution will become much tighter if there are more pairs, either
-from a single subject, or from a number of subjects (in which case we would
-certainly prefer MDS with parameters for individual differences).
-
-# A Rank Order Example
-
-```{r}
-library(MASS)
-
-source("../../smacofCode/smacofNM/smacofConvert.R")
-source("../../smacofCode/smacofNM/smacofMakeData.R")
-source("../../smacofCode/smacofNM/smacofMonotoneRegression.R")
-source("../../smacofCode/smacofNM/smacofPlots.R")
-
-data(ekman, package = "smacof")
-ekman <- 1 - ekman 
-ekmanData <- smacofMakeRankOrderData(ekman)
-ekmanXold <- matrix(c(-0.1576320, -0.54429773,
-                      -0.2169837, -0.50815312,
-                      -0.4778581, -0.31203061,
-                      -0.5131424, -0.23393512,
-                      -0.5338027,  0.09175252,
-                      -0.4368053,  0.36071649,
-                      -0.2650675,  0.52174944,
-                      -0.1374662, 0.57443857,
-                      0.3162169,  0.46015778,
-                      0.4575480,  0.24454905,
-                      0.5210238,  0.03357499,
-                      0.5128727, -0.13074190,
-                      0.4824539, -0.22250509,
-                      0.4486425, -0.33527525), 14, 2, byrow = TRUE)
-```
-
-# Code
-
-## Make the cartwheels and ask for choices
-
-```{r}
-
-smacofMakeAllTriads <- function(names, complete = TRUE) {
-  outfile <- file("./output.txt", open = "w")
-  n <- length(names)
-  m <- choose(n, 3)
-  z <- t(combn(n, 3))[sample(1:m, m), ]
-  z <- t(apply(z, 1, function(x)
-    sample(x, length(x))))
-  y <- 8 - 3 * sqrt(3)
-  for (i in 1:m) {
-    x <- z[i, ]
-    plot(
-      1:10,
-      axes = FALSE,
-      type = "n",
-      xlab = "",
-      ylab = ""
-    )
-    lines(c(2, 8), c(8, 8), col = "RED")
-    lines(c(2, 5), c(8, y), col = "RED")
-    lines(c(8, 5), c(8, y), col = "RED")
-    text(c(2, 8, 5), c(8.2, 8.2, y - .2),
-         c(names[x[1]], names[x[2]], names[x[3]]), cex = 1.5)
-    text(5, 8.5, "1")
-    text(3, 5.40, "2")
-    text(7, 5.40, "3")
-    print(c(noquote(names[x[1]]), noquote(names[x[2]]), noquote(names[x[3]])))
-    u <- readline("most similar pair: ")
-    if (complete) {
-      v <- readline("least similar pair: ")
-      write(c(x, u, v), ncolumns = 5, file = outfile)
-    } else {
-      write(c(x, u), ncolumns = 4, file = outfile)
-    }
-  }
-  close(outfile)
-}
-
-smacofMakeRandomTriads <-
-  function(names, nrandom, complete = TRUE) {
-    outfile <- file("./output.txt", open = "w")
-    n <- length(names)
-    y <- 8 - 3 * sqrt(3)
-    for (i in 1:nrandom) {
-      x <- sample(1:n, 3)
-      plot(
-        1:10,
-        axes = FALSE,
-        type = "n",
-        xlab = "",
-        ylab = ""
-      )
-      lines(c(2, 8), c(8, 8), col = "RED")
-      lines(c(2, 5), c(8, y), col = "RED")
-      lines(c(8, 5), c(8, y), col = "RED")
-      text(c(2, 8, 5), c(8.2, 8.2, y - .2),
-           c(names[x[1]], names[x[2]], names[x[3]]), cex = 1.5)
-      text(5, 8.5, "1")
-      text(3, 5.40, "2")
-      text(7, 5.40, "3")
-      print(c(noquote(names[x[1]]), noquote(names[x[2]]), noquote(names[x[3]])))
-      u <- readline("most similar pair: ")
-      if (complete) {
-        v <- readline("least similar pair: ")
-        write(c(x, u, v), ncolumns = 5, file = outfile)
-      } else {
-        write(c(x, u), ncolumns = 4, file = outfile)
-      }
-    }
-    close(outfile)
-  }
-
-smacofMakeAllPairs <- function(names) {
-  outfile <- file("./output.txt", open = "w")
-  n <- length(names)
-  l <- choose(n, 2)
-  u <- combn(n, 2)
-  u <- apply(u, 2, function(x)
-    sample(x, length(x)))
-  m <- choose(l, 2)
-  v <- combn(l, 2)[, sample(1:m, m)]
-  v <- apply(v, 2, function(x)
-    sample(x, length(x)))
-  for (i in 1:m) {
-    x <- c(u[, v[1, i]], u[, v[2, i]])
-    plot(
-      1:10,
-      axes = FALSE,
-      type = "n",
-      xlab = "",
-      ylab = ""
-    )
-    lines(c(2, 8), c(8, 8), col = "RED")
-    lines(c(2, 8), c(4, 4), col = "RED")
-    text(c(2, 8, 2, 8),
-         c(8.5, 8.5, 4.5, 4.5),
-         c(names[x[1]], names[x[2]], names[x[3]], names[x[4]]),
-         cex = 1.5)
-    text(5, 8.5, "1")
-    text(5, 4.5, "2")
-    cat("(",
-        names[x[1]],
-        ",",
-        names[x[2]],
-        ") and (",
-        names[x[3]],
-        ",",
-        names[x[4]],
-        ")\n",
-        sep = "")
-    r <- readline("most similar pair: ")
-    write(c(x, r), ncolumns = 5, file = outfile)
-  }
-  close(outfile)
-}
-
-smacofMakeRandomPairs <- function(names, nrandom) {
-  outfile <- file("./output.txt", open = "w")
-  n <- length(names)
-  l <- choose(n, 2)
-  u <- combn(n, 2)
-  u <- apply(u, 2, function(x)
-    sample(x, length(x)))
-  for (i in 1:nrandom) {
-    k <- sample(l, 2)
-    x <- c(u[, k[1]], u[, k[2]])
-    plot(
-      1:10,
-      axes = FALSE,
-      type = "n",
-      xlab = "",
-      ylab = ""
-    )
-    lines(c(2, 8), c(8, 8), col = "RED")
-    lines(c(2, 8), c(4, 4), col = "RED")
-    text(c(2, 8, 2, 8),
-         c(8.5, 8.5, 4.5, 4.5),
-         c(names[x[1]], names[x[2]], names[x[3]], names[x[4]]),
-         cex = 1.5)
-    text(5, 8.5, "1")
-    text(5, 4.5, "2")
-    cat("(",
-        names[x[1]],
-        ",",
-        names[x[2]],
-        ") and (",
-        names[x[3]],
-        ",",
-        names[x[4]],
-        ")\n",
-        sep = "")
-    r <- readline("most similar pair: ")
-    write(c(x, r), ncolumns = 5, file = outfile)
-  }
-  close(outfile)
-}
-
-smacofMakeRankOrderData <- function(delta, tieblocks = TRUE) {
-  if (any(class(delta) == "dist")) {
-    n <- attr(delta, "Size")
-    delta <- smacofDistToRMVector(delta)
-  }
-  if (is.matrix(delta)) {
-    delta <- as.dist(delta)
-    n <- attr(delta, "Size")
-    delta <- smacofDistToRMVector(delta)
-  }
-  delta <- rank(delta)
-  x <- matrix(0, 0, 3)
-  k <- 1
-  for (i in 2:n) {
-    for (j in 1:(i - 1)) {
-      x <- rbind(x, c(i, j, delta[k]))
-      k <- k + 1
-    }
-  }
-  r <- order(delta)
-  x <- x[r, ]
-  return(x)
-}
-
-smacofMakeConditionalRankOrderData <-
-  function(delta, nr, nc, tieblocks = TRUE) {
-    x <- matrix(0, 0, 3)
-    for (i in 1:nr) {
-      if (is.matrix(delta)) {
-        d <- delta[i, ]
-      } else {
-        d <- delta[(i - 1) * nc + (1:nc)]
-      }
-      d <- rank(d)
-      u <- order(d)
-      v <- unname(cbind(i, 1:nc, d)[u,])
-      x <- rbind(x, v)
-    }
-    return(x)
-  }
-```
-
-## Smacof for Pairs
-
-```{r paircode, eval = FALSE}
-
-smacofNMforPairs <-
-  function(data,
-           xold,
-           itmax = 10,
-           eps = 1e-10,
-           verbose = TRUE) {
-    n <- nrow(xold)
-    m <- nrow(data)
-    itel <- 1
-    dold <- as.matrix(dist(xold))
-    w <- matrix(0, n, n)
-    for (r in 1:m) {
-      i <- data[r, 1]
-      j <- data[r, 2]
-      k <- data[r, 3]
-      l <- data[r, 4]
-      w[i, j] <- w[i, j] + 1
-      w[k, l] <- w[k, l] + 1
-      w[j, i] <- w[i, j]
-      w[l, k] <- w[k, l]
-    }
-    ssqd <- sum(w * (dold ^ 2))
-    dold <- dold / sqrt(ssqd)
-    xold <- xold / sqrt(ssqd)
-    v <- -w
-    diag(v) <- -rowSums(v)
-    vinv <- ginv(v)
-    sold <- Inf
-    repeat {
-      bold <- matrix(0, n, n)
-      snew <- 0
-      for (r in 1:m) {
-        i <- data[r, 1]
-        j <- data[r, 2]
-        k <- data[r, 3]
-        l <- data[r, 4]
-        x <- data[r, 5]
-        dij <- dold[i, j]
-        dkl <- dold[k, l]
-        if (x == 1) {
-          if (dij <= dkl) {
-            dhatij <- dij
-            dhatkl <- dkl
-          } else {
-            ave <- (dij + dkl) / 2
-            dhatij <- ave
-            dhatkl <- ave
-            snew <- snew + ((dij - dkl) ^ 2) / 2
-          }
-        }
-        if (x == 2) {
-          if (dkl <= dij) {
-            dhatij <- dij
-            dhatkl <- dkl
-          } else {
-            ave <- (dij + dkl) / 2
-            dhatij <- ave
-            dhatkl <- ave
-            snew <- snew + ((dij - dkl) ^ 2) / 2
-          }
-        }
-        bold[i, j] <- bold[i, j] + dhatij / dij
-        bold[k, l] <- bold[k, l] + dhatkl / dkl
-        bold[j, i] <- bold[i, j]
-        bold[l, k] <- bold[k, l]
-      }
-      bold <- -bold
-      diag(bold) <- -rowSums(bold)
-      xnew <- vinv %*% bold %*% xold
-      dnew <- as.matrix(dist(xnew))
-      ssqd <- sum(w * (dnew ^ 2))
-      xnew <- xnew / sqrt(ssqd)
-      dnew <- dnew / sqrt(ssqd)
-      if (verbose) {
-        cat(
-          "itel = ",
-          formatC(itel, format = "d"),
-          "sold = ",
-          formatC(sold, digits = 10, format = "f"),
-          "snew = ",
-          formatC(snew, digits = 10, format = "f"),
-          "\n"
-        )
-      }
-      if ((itel == itmax) || ((sold - snew) < eps)) {
-        break
-      }
-      xold <- xnew
-      dold <- dnew
-      sold <- snew
-      itel <- itel + 1
-    }
-    return(list(
-      b = bold,
-      v = v,
-      x = xnew,
-      loss = snew,
-      itel = itel
-    ))
-  }
-```
-
-## Smacof for Rank Orders
-
-```{r rankcode, eval = FALSE}
-library(MASS)
+## Data Format
 
 
-smacofNMforRankOrder <-
-  function(data,
-           xold,
-           ties = 1,
-           itmax = 1000,
-           eps = 1e-10,
-           verbose = TRUE) {
-    n <- nrow(xold)
-    m <- nrow(data)
-    itel <- 1
-    # put the w in a matrix
-    w <- matrix(0, n, n)
-    wvec <- data[, 4]
-    for (i in 1:m) {
-      w[data[i, 1], data[i, 2]] <- wvec[i]
-      w[data[i, 2], data[i, 1]] <- wvec[i]
-    }
-    v <- -w
-    diag(v) <- -rowSums(v)
-    vinv <- ginv(v)
-    dold <- as.matrix(dist(xold))
-    ssqd <- sum(w * (dold ^ 2))
-    dold <- dold / sqrt(ssqd)
-    xold <- xold / sqrt(ssqd)
-    # put dold in the correct order in a vector
-    dord <- rep(0, m)
-    for (i in 1:m) {
-      dord[i] <- dold[data[i, 1], data[i, 2]]
-    }
-    if (ties == 1) {
-      dprim <- smacofPrimaryMonotoneRegression(data, dord)
-      dord <- dprim$result
-      data <- dprim$data
-    }
-    if (ties == 2) {
-      dord <- smacofSecondaryMonotoneRegression(data, dord)
-    }
-    # put the dhat in a matrix
-    dhat <- matrix(0, n, n)
-    for (i in 1:m) {
-      dhat[data[i, 1], data[i, 2]] <- dord[i]
-      dhat[data[i, 2], data[i, 1]] <- dord[i]
-    }
-    sold <- sum(w * (dhat - dold) ^ 2)
-    repeat {
-      bold <- dhat / (dold + diag(n))
-      bold <- -bold
-      diag(bold) <- -rowSums(bold)
-      xnew <- vinv %*% bold %*% xold
-      dnew <- as.matrix(dist(xnew))
-      ssqd <- sum(w * (dnew ^ 2))
-      xnew <- xnew / sqrt(ssqd)
-      dnew <- dnew / sqrt(ssqd)
-      smid <- sum(w * (dhat - dnew) ^ 2)
-      # put dold in the correct order in a vector
-      dord <- rep(0, m)
-      for (i in 1:m) {
-        dord[i] <- dold[data[i, 1], data[i, 2]]
-      }
-      if (ties == 1) {
-        dpri <- smacofPrimaryMonotoneRegression(data, dord)
-        dord <- dpri$result
-        data <- dpri$data
-      }
-      if (ties == 2) {
-        dord <- smacofSecondaryMonotoneRegression(data, dord)
-      }
-      # put the dhat in a matrix
-      # put the dhat in a matrix
-      dhat <- matrix(0, n, n)
-      for (i in 1:m) {
-        dhat[data[i, 1], data[i, 2]] <- dord[i]
-        dhat[data[i, 2], data[i, 1]] <- dord[i]
-      }
-      snew <- sum(w * (dhat - dnew) ^ 2)
-      if (verbose) {
-        cat(
-          "itel = ",
-          formatC(itel, format = "d"),
-          "sold = ",
-          formatC(sold, digits = 10, format = "f"),
-          "smid = ",
-          formatC(smid, digits = 10, format = "f"),
-          "snew = ",
-          formatC(snew, digits = 10, format = "f"),
-          "\n"
-        )
-      }
-      if ((itel == itmax) || ((sold - snew) < eps)) {
-        break
-      }
-      xold <- xnew
-      dold <- dnew
-      sold <- snew
-      itel <- itel + 1
-    }
-    return(list(
-      b = bold,
-      v = v,
-      ranks = data[,3],
-      dvec = dord,
-      dnew = as.dist(dnew),
-      dhat = as.dist(dhat),
-      xnew = xnew,
-      loss = snew,
-      itel = itel
-    ))
-  }
-```
 
 
 # References
