--- a/smacofBS/smacofBS.tex
+++ b/smacofBS/smacofBS.tex
@@ -196,7 +196,7 @@
 \title{Smacof at 50: A Manual\\
 Part 1: Smacof with B-Splines}
 \author{Jan de Leeuw - University of California Los Angeles}
-\date{Started February 21 2024, Version of April 04, 2024}
+\date{Started February 21 2024, Version of April 16, 2024}
 
 \begin{document}
 \maketitle
@@ -215,558 +215,6 @@ appreciated, but is not required. The files can be found at
 \url{https://github.com/deleeuw/smacofCode}.
 
 \sectionbreak
-
-\section{Introduction}\label{introduction}
-
-In \emph{Multidimensional Scaling (MDS)} the data consists of information
-about the similarity or dissimilarity between pairs of objects selected
-from a finite set \(\mathcal{O}=\{o_1,\cdots,o_n\}\).
-
-In \emph{metric MDS} we have numerical dissimilarity measures and we want to
-map the objects \(o_i\) into \(n\) points \(x_i\) of some metric space in such
-a way that the distances between the points approximate the
-dissimilarities between the objects. In \emph{smacof}, our framework for MDS
-theory, algorithms, and computer programs, the metric space is
-\(\mathbb{R}^p\), the space of all \(p\)-tuples of real numbers, and in the
-code documented in this manual we assume the distance is the usual
-Euclidean distance.
-
-In \emph{non-metric MDS} the information about the dissimilarities is
-incomplete. It is usually \emph{ordinal}, i.e.~it tells us in some way or
-another that some dissimilarties are larger or smaller than others.
-Somewhere between metric and non-metric MDS is MDS with \emph{missing data},
-in which some dissimilarities are known numbers while others are
-unknown. MDS with missing data is a form of \emph{distance matrix completion}
-(Fang and O'Leary (2012)).
-
-\section{Krukal's Stress}\label{krukals-stress}
-
-In the pioneering papers Kruskal (1964a) and Kruskal (1964b) the MDS problem
-was formulated for the first time as minimization of an explicit loss
-function, which measures the quality of the approximation of the
-dissimilarities by the distances.
-
-\subsection{Metric MDS}\label{metric-mds}
-
-The loss function in least squares
-metric Euclidean MDS is called \emph{raw stress} or \emph{Kruskal's raw stress}
-and is defined as
-\begin{equation}
-\sigma_R(X):=\frac12\sum w_{ij}(\delta_{ij}-d_{ij}(X))^2.
-\label{eq:stressdef}
-\end{equation}
-
-The symbol \(:=\) is used for definitions. In definition
-\eqref{eq:stressdef} the \(w_{ij}\) are known non-negative \emph{weights}, the
-\(\delta_{ij}\) are the known non-negative \emph{dissimilarities} between
-objects \(o_i\) and \(o_j\), and the \(d_{ij}(X)\) are the \emph{distances} between
-the corresponding points \(x_i\) and \(x_j\). The summation is over all
-\(\binom{n}{2}\) pairs \((i,j)\) with \(j>i\), i.e.~over elements below the
-diagonal of the matrices \(W\) and \(\Delta\). The subscript \(R\) in \(\sigma_R\)
-stands for ``raw''. From now on we use ``metric
-MDS'' to mean Least Squares Metric Euclidean MDS.
-
-The \(n\times p\) matrix \(X\), which has the coordinates \(x_i\) of the \(n\)
-points as its rows, is called the \emph{configuration}, where \(p\) is the
-\emph{dimension} of the Euclidean space in which we make the map. Thus
-\begin{equation}
-d_{ij}(X)=\sqrt{\sum_{s=1}^p(x_{is}-x_{js})^2}.
-\label{eq:ddef}
-\end{equation} The metric MDS problem (of dimension \(p\), for given \(W\)
-and \(\Delta\)) is the minimization of \eqref{eq:stressdef} over the
-\(n\times p\) configurations \(X\).
-
-The weights \(w_{ij}\) can be used to quantify information about the
-precision or importance of the corresponding dissimilarities. Some of
-the weights may be zero, which can be used to code \emph{missing data}. If
-all weights are positive we have \emph{complete data}. If we have complete
-data, and all weights are equal to one, we have \emph{unweighted} metric MDS.
-The pioneering papers by Shepard, Kruskal, and Guttman only consider the unweighted case. Weights were only introduced in MDS in De Leeuw (1977).
-
-We assume throughout that the weights are \emph{irreducible} (De Leeuw (1977)).
-This means there is no partitioning of the index set
-\(I_n:=\{1,2,\cdots,n\}\) into subsets for which all between-subset
-weights are zero. A reducible metric MDS problems decomposes into a
-number of smaller independent metric MDS problems, so the irreducibility
-assumption causes no real loss of generality.
-
-The fact that the summation in \eqref{eq:stressdef} is over all \(j<i\)
-indicates that the diagonal elements of \(\Delta\) are not used (they are
-assumed to be zero) and the elements above the diagonal are not used as
-well (they are assumed to be equal to the corresponding elements below
-the diagonal). The somewhat mysterious factor \(\frac12\) in definition
-\eqref{eq:stressdef} is there because it simplifies some of the formulas
-in later sections of this paper.
-
-\subsection{Non-metric MDS}\label{non-metric-mds}
-
-Kruskal was not really interested in metric MDS and the ``raw'' loss
-function \eqref{eq:stressdef}. His papers are really about non-metric
-MDS, by which we mean least squares non-metric Euclidean MDS. Non-metric
-MDS differs from metric MDS because we have incomplete information about
-the dissimilarities. As we have seen, that if some dissimilarities are
-missing metric MDS can handle this by using zero weights. In some
-situations, however, we only know the rank order of the non-missing
-dissimilarities. We do not know, or we refuse to use, their actual
-numeric values. Or, to put it differently, even if we have numerical
-dissimilarities we are looking for a \emph{transformation} of the non-missing
-dissimilarities, where the transformation is chosen from a set of
-admissible transformations (for instance from all linear or monotone
-transformations). If the dissimilarities are non-numerical, for example
-rank orders or partitionings, we choose from the set of admissible
-\emph{quantifications}.
-
-In non-metric MDS raw stress becomes
-\begin{equation}
-\sigma_R(X,\Delta):=\frac12\sum w_{ij}(\delta_{ij}-d_{ij}(X))^2,
-\label{eq:rawstressdef}
-\end{equation}
-where \(\Delta\) varies over the quantified or transformed
-dissimilarities. In MDS parlance they are also called \emph{pseudo-distances}
-or \emph{disparities}. Loss function \eqref{eq:rawstressdef} must be minimized
-over both configurations and disparities, with the condition that the
-disparities \(\Delta\) are an admissible transformation or quantification
-of the data. In Kruskal's non-metric MDS this means
-requiring monotonicity. In this paper we will consider various other
-choices for the set of admissible transformations. We will use the
-symbol \(\mathfrak{D}\) for the set of admissible transformations
-
-The most familiar examples of \(\mathfrak{D}\) (linear,
-polynomial, splines, monotone) define convex cones with apex at the origin. This
-means that if \(\Delta\in\mathfrak{D}\) then so is \(\lambda\Delta\) for all
-\(\lambda\geq 0\). But consequently minimizing \eqref{eq:rawstressdef} over
-all \(\Delta\in\mathfrak{D}\) and over all configurations has the trivial
-solution \(\Delta=0\) and \(X=0\), corresponding with the global minimum
-\(\sigma(X,\Delta)=0\). We need additional constraints to rule out this
-trivial solution, and in non-metric MDS this is done by choosing a
-\emph{normalization} that keeps the solution away from zero.
-
-Kruskal's original solution is to define \emph{normalized stress} as
-\begin{equation}
-\sigma(X,\Delta):=\frac{\sum w_{ij}(\delta_{ij}-d_{ij}(X))^2}{\sum w_{ij}d_{ij}^2(X)}.
-\label{eq:nstressdef}
-\end{equation}
-To be precise, in Kruskal's formulation there are no weights,
-and he actually takes the square root of \eqref{eq:nstressdef} to define
-\emph{Kruskal's stress}. The non-metric Euclidean MDS problem now is to minimize
-loss function \eqref{eq:nstressdef} over all \(n\times p\) configurations
-\(X\) and all admissible disparities \(\Delta\).
-
-\subsection{Normalization}\label{normalization}
-
-Equation \eqref{eq:nstressdef} is only one way to normalize raw stress. Some obvious alternatives are discussed in detail in
-Kruskal and Carroll (1969) and De Leeuw (1975). In the terminology of
-De Leeuw (1975) there are \emph{explicit} and \emph{implicit} normalizations.
-
-In implicit normalization we minimize either
-\begin{equation}
-\sigma(X,\hat D):=\frac{\sum  w_{ij}(\hat d_{ij} -d_{ij}(X))^2}{\sum   w_{ij}^{\ }\hat d_{ij}^2}
-\label{eq:implicit1}
-\end{equation}
-or
-\begin{equation}
-\sigma(X,\hat D):=\frac{\sum   w_{ij}(\hat d_{ij}-d_{ij}(X))^2}{\sum   w_{ij}^{\ }d_{ij}^2(X) }
-\label{eq:implicit2}
-\end{equation}
-over \(X\) and \(\Delta\in\mathfrak{D}\).
-
-As we have seen, Kruskal (1964a) chooses definition \eqref{eq:implicit2} and
-calls the explicitly normalized loss function \emph{normalized stress}. Note that we overload the symbol \(\sigma\) to denote any one of the least squares loss
-functions. It will always be clear from the text which \(\sigma\) we are
-talking about.
-
-In explicit normalization we minimize the raw stress \(\sigma_R(X,\hat D)\)
-from \eqref{eq:rawstressdef}, but we add the explicit constraint
-\begin{equation}
-\sum   w_{ij}^{\ }d_{ij}^2(X)=1,
-\label{eq:explicit1}
-\end{equation}
-or the constraint
-\begin{equation}
-\sum   w_{ij}^{\ }\hat d_{ij}^2=1.
-\label{eq:explicit2}
-\end{equation}
-Kruskal and Carroll (1969) and De Leeuw (2019b) show that these
-four normalizations all lead to essentially the same solution for \(X\)
-and \(\hat D\), up to scale factors dictated by the choice of the particular
-normalization. It is also possible to normalize both \(X\) and \(\hat D\),
-either explicitly or implicitly, and again this will give the same
-solutions, suitably normalized. These invariance results assume the
-admissible transformations form a closed cone with apex at the origin,
-i.e.~if \(\hat D\) is admissible and \(\lambda\geq 0\) then \(\lambda\hat D\)
-is admissible as well. The matrices of Euclidean distances \(D(X)\) form a
-similar closed cone as well. The non-metric MDS problem is to find an element
-of the \(\hat D\) cone \(\mathcal{D}\) and an element of the \(D(X)\) cone where the angle between the two is a small as possible.
-
-In the R version of smacof (De Leeuw and Mair (2009),
-Mair, Groenen, and De Leeuw (2022)) we use explicit normalization
-\eqref{eq:explicit2}. This is supported by the result, also due to
-De Leeuw (1975), that projection on the intersection of the cone of
-disparities and the sphere defined by \eqref{eq:explicit2} is equivalent
-to first projecting on the cone and then normalizing the projection (see
-also Bauschke, Bui, and Wang (2018)).
-
-In the version of non-metric MDS discussed in this manualwe need more flexibility. For algorithmic reasons that may become clear later on, we will go with the original \eqref{eq:nstressdef}, i.e.~with the implicitly normalized
-Kruskal's stress. For the final results the choice between normalizations should not make a difference, but the iterative computations will be different for the
-diufferent choices.
-
-\subsection{Some thoughts on ALS}\label{some-thoughts-on-als}
-
-I will take this opportunity to clear up some misunderstandings and
-confusions that have haunted the early development of non-metric MDS.
-
-\subsubsection{The Single-Phase approach}\label{the-single-phase-approach}
-
-In Kruskal (1964a) defines
-\begin{equation}
-\sigma(X):=\min_{\hat D\in\mathfrak{D}}\ \sigma(\hat D,X)=\sigma(X,\hat D(X)),
-\label{eq:project}
-\end{equation}
-where \(\sigma(\hat D,X)\) is defined by
-\eqref{eq:implicit2}. The minimum in \eqref{eq:project} is over admissible
-transformations. In definition \eqref{eq:project}
-\begin{equation}
-\hat D(X):=\mathop{\text{argmin}}_{\hat D\in\mathfrak{D}}\sigma(X, \hat D).
-\label{eq:optscal}
-\end{equation}
-Normalized stress defined by \eqref{eq:project} is now a
-function of \(X\) only. Under some conditions, which are true in Kruskal's
-definition of non-metric MDS, there is a simple relation between the
-partials of \eqref{eq:implicit2} and those of \eqref{eq:project}.
-\begin{equation}
-\mathcal{D}\sigma(X)=\mathcal{D}_1\sigma(X,\hat D(X)),
-\label{eq:partials}
-\end{equation}
-where \(\mathcal{D}\sigma(X)\) are the derivatives of
-\(\sigma\) from \eqref{eq:project} and \(\mathcal{D}_1\sigma(X,\hat D(X))\)
-are the partial derivatives of \(\sigma\) from \eqref{eq:implicit2} with
-respect to \(X\). Thus the partials of \(\sigma\) from \eqref{eq:project} can
-be computed by evaluating the partials of \(\sigma\) from
-\eqref{eq:implicit2} with respect to \(X\) at \((X,\hat D(X))\). This has
-created much confusion in the past. The non-metric MDS problem in Kruskal's original formulation is now to
-minimize \(\sigma\) from \eqref{eq:project}, which is a function of \(X\)
-alone.
-
-Guttman (1968) calls this the \emph{single-phase approach}. A variation of
-Kruskal's single-phase approach defines
-\begin{equation}
-\sigma(X)=\sum w_{ij}(d_{ij}^\#(X)-d_{ij}(X))^2,
-\label{eq:rankimage}
-\end{equation}
-where the \(d_{ij}^\#(X)\) are \emph{Guttman's rank images}, i.e.~the
-permutation of the \(d_{ij}(X)\) that makes them monotone with the
-\(\delta_{ij}\) (Guttman (1968)). Or, alternatively, define
-\begin{equation}
-\sigma(X):=\sum   w_{ij}(d_{ij}^\%(X)-d_{ij}(X))^2,
-\label{eq:shepard}
-\end{equation}
-where the \(\hat d_{ij}^\%(X)\) are \emph{Shepard's rank images}, i.e.~the
-permutation of the \(\delta_{ij}\) that makes them monotone with the
-\(d_{ij}(X)\) (Shepard (1962a), Shepard (1962b), De Leeuw (2017b)).
-
-Minimizing the Shepard or Guttman single-phase loss functions is
-computationally more complicated than Kruskal's \emph{monotone regression}
-approach, mostly because the rank-image transformations are not
-differentiable, and there is no analog of \eqref{eq:partials} and of the
-equivalence of the different implicit and explicit normalizations.
-
-\subsubsection{The Two-Phase Approach}\label{the-two-phase-approach}
-
-The \emph{two-phase approach} or \emph{alternating least squares (ALS)} approach
-alternates minimization of \(\sigma(\hat D,X)\) over \(X\) for our current
-best estimate of \(\hat D\) with minimization of \(\sigma(\hat D,X)\) over
-\(\Delta\in\mathfrak{D}\) for our current best value of \(X\). Thus an
-update from iteration \(k\) to iteration \(k+1\) looks like \begin{align}
-\hat D^{(k)}&=\mathop{\text{argmin}}_{\hat D\in\mathfrak{D}}\sigma(\hat D,X^{(k)}),\label{eq:step1}\\
-X^{(k+1)}&=\mathop{\text{argmin}}_X\sigma(\hat D^{(k)},X).\label{eq:step2}
-\end{align} This ALS approach to MDS was in the air since the early
-(unsuccessful) attempts around 1968 of Young and De Leeuw to combine
-Torgerson's classic metric MDS method with Kruskal's monotone regression
-transformation. All previous implementations of non-metric smacof use
-the two-phase approach, and we will do the same in this paper.
-
-As formulated, however, there are some problems with the ALS algorithm.
-Step \eqref{eq:step1} is easy to carry out, using monotone regression.
-Step \eqref{eq:step2} means solving a metric scaling problem, which is an
-iterative proces that requires an infinite number of iterations. Thus,
-in the usual implementations, step \eqref{eq:step1} is combined with one
-of more iterations of a convergent iterative procedure for metric MDS,
-such as smacof. If we take only one of these \emph{inner iterations} the
-algorithm becomes indistinguishable from Kruskal's single-phase method.
-This has also created much confusion in the past.
-
-In the usual implementations of the ALS approach we solve the first
-subproblem \eqref{eq:step1} exactly, while we take only a single step
-towards the solution for given \(\hat D\) in the second phase
-\eqref{eq:step2}. If we have an infinite iterative procedure to compute
-the optimal \(\hat D\in\mathfrak{D}\) for given \(X\), then a more balanced
-approach would be to take several inner iterations in the first phase
-and several inner iterations in the second phase. How many of each,
-nobody knows. In our current implementation of smacof we take several
-inner iteration steps in the first phase and a single inner iteration
-step in the second phase.
-
-\section{Smacof Notation and Terminology}\label{smacof-notation-and-terminology}
-
-We discuss some standard MDS notation, first introduced in
-De Leeuw (1977). This notation is useful for the second phase of the ALS
-algorithm, in which solve the metric MDS problem of we minimizing
-unnormalized \(\sigma(X,\hat D)\) over \(X\) for fixed \(\hat D\). We will
-discuss the first ALS phase later in the paper.
-
-Start with the unit vectors \(e_i\) of length \(n\). They have a non-zero
-element equal to one in position \(i\), all other elements are zero. Think
-of the \(e_i\) as the columns of the identity matrix.
-
-Using the \(e_i\) we define for all \(i\not= j\) the matrices
-\begin{equation}
-A_{ij}:=(e_i-e_j)(e_i-e_j)'.
-\end{equation} The \(A_{ij}\) are of order \(n\), symmetric,
-doubly-centered, and of rank one. They have four non-zero elements.
-Elements \((i,i)\) and \((j,j)\) are equal to \(+1\), elements \((i,j)\) and
-\((j,i)\) are \(-1\).
-
-The importance of \(A_{ij}\) in MDS comes from the equation
-\begin{equation}
-d_{ij}^2(X)=\text{tr}\ X'A_{ij}X.
-\label{eq:dfroma}
-\end{equation} In addition we use the fact that the \(A_{ij}\) form a
-basis for the \(binom{n}{2}\)-dimensional linear space of all
-doubly-centered symmetric matrices.
-
-Expanding the square in the definition of stress gives \begin{equation}
-\sigma(X)=\frac12\{\sum   w_k\delta_k^2-2\ \sum   w_k\delta_kd_k(X)+\sum   w_kd_k^2(X)\}.
-\label{eq:expand}
-\end{equation} It is convenient to have notation for the three separate
-components of stress from equation \eqref{eq:expand}. Define
-\begin{align}
-\eta_{\hat D}^2&=\sum   w_{ij}\hat d_{ij}^2,\label{eq:condef}\\
-\rho(X)&=\sum   w_{ij}\hat d_{ij}d_{ij}(X),\label{eq:rhodef}\\
-\eta^2(X)&=\sum   w_{ij}d_{ij}(X)^2.\label{eq:etadef}
-\end{align} which lead to \begin{equation}
-\sigma(X)=\frac12\left\{\eta_{\hat D}^2-2\rho(X)+\eta^2(X)\right\}.
-\label{eq:stressshort}
-\end{equation} We also need \begin{equation}
-\lambda(X)=\frac{\rho(X)}{\eta(X)}.
-\label{eq:lambdadef}
-\end{equation}
-
-Using the \(A_{ij}\) makes it possible to give matrix expressions for
-\(\rho\) and \(\eta^2\). First \begin{equation}
-\eta^2(X)=\text{tr}\ X'VX,
-\label{eq:etamat}
-\end{equation} with \begin{equation}
-V:=\sum   w_{ij}A_{ij}.
-\label{eq:vdef}
-\end{equation} In the same way \begin{equation}
-\rho(X)=\text{tr}\ X'B(X)X,
-\label{eq:rhomat}
-\end{equation} with \begin{equation}
-B(X):=\sum   w_{ij}r_{ij}(X)A_{ij},
-\label{eq:bdef}
-\end{equation} with \begin{equation}
-r_{ij}(X):=\begin{cases}\frac{\delta_{ij}}{d_{ij}(X)}&\text{ if }d_{ij}(X)>0,\\
-0&\text{ if }d_{ij}(X)=0.
-\end{cases}
-\end{equation} Note that \(B\) is a function from the set of \(n\times p\)
-configurations into the set of symmetric doubly-dentered matrices of
-order \(n\). All matrices of the form \(\sum x_{ij}A_{ij}\), where summation
-is over all pairs \((i,j)\) with \(j<i\), are symmetric and doubly-centered.
-They have \(-x_{ij}\) as off-diagonal elements while the diagonal elements
-\((i,i)\) are \(\sum_{j=1}^nx_{ij}\).
-
-Because \(B(X)\) and \(V\) are non-negative linear combinations of the
-\(A_{ij}\) they are both positive semi-definite. Because \(W\) is assumed to
-be irreducible the matrix \(V\) has rank \(n-1\), with only vectors
-proportional to the vector \(e\) with all elements equal to one in its
-null-space (De Leeuw (1977)).
-
-Summarizing the results so far we have \begin{equation}
-\sigma(X)=\frac12\{\eta_{\hat D}^2-\text{tr}\ X'B(X)X+\text{tr}\ X'VX\}.
-\label{eq:sigmat}
-\end{equation}
-
-Next we define the \emph{Guttman transform} of a configuration \(X\), for given
-\(W\) and \(\Delta\), as \begin{equation}
-G(X)=V^+B(X)X,
-\label{eq:gudef}
-\end{equation} with \(V^+\) the Moore-Penrose inverse of \(V\). In our
-computations we use \[
-V^+=(V+\frac{1}{n}ee')^{-1}-\frac{1}{n}ee'
-\] Also note that in the unweighted case with complete data \(V=nJ\),
-where \(J\) is the centering matrix \(I-\frac{1}{n}ee'\), and thus
-\(V^+=\frac{1}{n}J\). The Guttman transform is then simply
-\(G(X)=n^{-1}B(X)X\).
-
-\section{Intermezzo: Explicit Normalization}\label{intermezzo-explicit-normalization}
-
-\[
-\sigma(X,\hat D)=\frac12\frac{\sum w_{ij}(\hat d_{ij}-d_{ij}(X))^2}{\sum w_{ij}d_{ij}^2(X)}
-\]
-Majorize
-
-\[
-\sigma(X,\hat D)\leq\frac12\frac{\eta^2(\hat D)-2\text{tr}\ X'V\overline{Y}+\text{tr}\ X'VX}{\text{tr}\ X'VX}=\frac{\omega(X,Y)}{\eta^2(X)}
-\]
-Stationary equations
-\[
-\eta^2(X)(VX-VG(Y))-\omega(X,Y)VX=V\{(\eta^2(X)-\omega(X,Y))X-\eta^2(X)\overline Y\}
-\]
-So at a minimum \(X\) is proportional to \(\overline{Y}\) or \(X=\alpha\overline{Y}\) for some \(\alpha\). For \ldots{} to be zero we must have
-\[
-\alpha(\alpha^2\eta^2(\overline Y)-(\eta^2(\hat D)-2\alpha\eta^2(\overline Y)+\alpha^2\eta^2(\overline Y))=\alpha^2\eta^2(\overline Y)
-\]
-which works out to be
-\[
-\alpha=\frac{\eta^2(\hat D)}{\eta^2(\overline Y)}
-\]
-\[
-\hat X=\frac{\eta^2(\hat D)}{\eta^2(\overline Y)}\ \overline{Y}
-\]
-The minimum is equal to
-
-\[
-\frac{-\frac{(\eta^2(\overline Y))^2}{\eta^2(\hat D)}+\eta^2(\overline Y)}{\eta^2(\overline Y)}=1-\frac{\eta^2(\overline Y)}{\eta^2(\hat D)}
-\]
-Use homogeneity of the Guttman transform.
-
-More generally suppose we update with
-\[
-X=\overline Y+\alpha(Y-\overline Y)
-\]
-Write
-\[
-\omega(X,Y)=\eta^2(\hat D)+\text{tr}\ (X-\overline Y)'V(X-\overline Y)-\eta^2(\overline Y)
-\]
-Thus if \(X(\alpha)=\overline Y+\alpha(Y-\overline Y)\) we have
-\[
-\omega(\alpha)=\eta^2(\hat D)+\alpha^2\text{tr}\ (Y-\overline Y)'V(Y-\overline Y)-\eta^2(\overline Y)
-\]
-and
-\[
-\eta^2(\alpha)=\eta^2(\overline Y)+2\alpha\text{tr}\ (Y-\overline Y)'V\overline Y+\alpha^2\text{tr}\ (Y-\overline Y)'V(Y-\overline Y)
-\]
-\[
-\omega(Y,Y)=\eta^2(\hat D)+\text{tr}\ (Y-\overline Y)'V(Y-\overline Y)-\eta^2(\overline Y)
-\]
-\[
-\frac{\omega(\alpha)}{\eta^2(\alpha)}\leq\sigma(Y)
-\]
-
-\section{Properties of Smacof Loss}\label{properties-of-smacof-loss}
-
-\subsection{Derivatives}\label{derivatives}
-
-The Euclidean distance function \(d_{ij}\) from \ldots{} is not differentiable
-at configurations \(X\) with \(x_i=x_j\). If \(d_{ij}(X)>0\) then \[
-\mathcal{D}\sigma(X)=\frac{1}{d_{ij}(X)}A_{ij}X
-\] If \(d_{ij}(X)=0\) then \[
-D_+d_{ij}(X,Y)=\lim_{\epsilon\downarrow 0}\frac{d_{ij}(X+\epsilon Y)-d_{ij}(X)}{\epsilon}=d_{ij}(Y)
-\] which is non-linear in \(Y\), showing non-differentiability.
-
-\[
-D_+\sigma(X,Y)=\text{tr}\ Y'(V-B(X))X+\sum\{w_{ij}\delta_{ij}d_{ij}(Y)\mid d_{ij}(X)=0\}
-\] This form of the directional derivative is used by De Leeuw (1984) to
-show that two independent necessary conditions for a local minimum are
-\((V-B(X))X=0\) and \(d_{ij}(X)>0\) for all \((i,j)\) with
-\(w_{ij}\delta_{ij}>0\). \#\#\# Gradient
-
-\[
-\mathcal{D}\sigma(X)=(V-B(X))X
-\] At a stationary point \(B(X)X=VX\) or \(V^+B(X)X=X\). Thus a necessary
-condition for a local minimum is that \(V^+B(X)\) has at least \(p\)
-eigenvalues equal to one. De Leeuw (2014) has shown that if
-\(V^+B(X)\lesssim I\) then actually \(X\) is a global minimizer of stress.
-
-\subsubsection{Hessian}\label{hessian}
-
-The results on the Hessian of stress are largely unpublished. So we
-summarize them here in this manual, so they'll be even more unpublished.
-
-\[
-H_{st}(X):=\sum w_{ij}\frac{\delta_{ij}}{d_{ij}(X)}\left\{\frac{A_{ij}x_sx_t'A_{ij}}{d_{ij}^2(X)}\right\}
-\]
-
-\[
-H_{st}(X)=\sum   w_{ij}\frac{\delta_{ij}}{d_{ij}^3(X)}(x_{is}-x_{js})(x_{it}-x_{jt})A_{ij}
-\] \[
-\mathcal{D}_{st}\sigma(X)=\begin{cases}H_{st}(X)&\text{ if }s\not= t,\\
-V-B(X)+H_{st}&\text{ if }s= t.
-\end{cases}
-\] If \(I_p\) is the identity matrix of order \(p\), and \(\otimes\) is the
-Kronecker product, then \[
-\mathcal{D}^2\sigma(X)=I_p\otimes(V - B(X))+ H(X)
-\] \[
-\sum_{s=1}^p\sum_{t=1}^p y_s'H_{st}y_t=\sum w_{ij}\frac{\delta_{ij}}{d_{ij}(X)}\left\{\frac{(\text{tr} \ Y'A_{ij}X)^2}{d_{ij}^2(X)}\right\}\leq\sum w_{ij}\frac{\delta_{ij}}{d_{ij}(X)}\text{tr}\ Y'A_{ij}Y=\text{tr}\ Y'B(X)Y.
-\] Thus \[
-0\lesssim H\lesssim I_p\otimes B(X),
-\] and \[
-I_p\otimes (V-B(X))\lesssim\mathcal{D}^2\sigma(X)\lesssim I_p\otimes V
-\] At a local minimum of \(\sigma\) \[
-0\lesssim\mathcal{D}^2\sigma(X)\lesssim I_p\otimes V
-\] In comparing the lower bounds on \(\mathcal{D}^2\sigma(X)\) in \ldots{} and
-\ldots{} De Leeuw (2014) shows that \(V-B(X)\gtrsim 0\) is sufficient for a
-\emph{global} minimum of stress (but far from necessary).
-
-Also \[
-\sum_{t=1}^p H_{st}y_t=\sum w_{ij}\frac{\delta_{ij}}{d_{ij}(X)}\left\{\frac{\text{tr}\ Y'A_{ij}X }{d_{ij}^2(X)}\right\}A_{ij}x_s
-\] If \(Y=X\) then \(H(X)y=(I_p\otimes B(X))x\) and thus
-\[\mathcal{D}^2\sigma(X)x=(I_p\otimes V)x.\] In the unweighted case this
-means that \(X\) is an eigenvector of \(\mathcal{D}^2\sigma(X)\) with
-eigenvalue \(n\). Inequalities \ldots{} show that this is actually the largest
-eigenvalue. Or \((I_p\otimes V)^+\mathcal{D}^2\sigma(X)\lesssim I\).
-
-If \(Y=XT\) with \(T\) anti-symmetric then \(\text{tr}\ Y'A_{ij}X=0\) then
-thus \(H(X)y=0\). Thus \[
-\sum_{t=1}^p\mathcal{D}_{st}\sigma(X)y_t=(V-B(X))y_t
-\] which is zero if \(\mathcal{D}\sigma(X)\) is zero. Thus at a stationary
-point of stress \(\mathcal{D}^\sigma(X)\) has \(\frac12p(p-1)\) zero
-eigenvalues.
-
-There are several ways to think of the Hessian. The simplest one
-(perhaps) is as an \(np\times np\) symmetric matrix (corresponding to
-
-column-major R vector of length \(\frac12 np(np+1)\)). This is what we
-would use for a straightforward version of Newton-Raphson.
-
-It is more elegant, however, to think of \(H\) as a symmetric super-matrix
-of order \(p\), with as elements \(n\times n\) matrices. And, for some
-purposes, such as the pseudo-confidence ellipsoids in De Leeuw (2017a), as
-a super-matrix of order \(n\) with as elements \(p\times p\) matrices. Both
-the super-matrix interpretations lead to four-dimensional arrays, the
-first a \(p\times p\times n\times n\) array, the second an
-\(n\times n\times p\times p\) array. The different interpretations lead to
-different ways to store the Hessian in memory, and to different ways to
-retrieve its elements. Of course we can write routines to transform from
-one interpretation to another.
-
-\subsection{Lagrangian}\label{lagrangian}
-
-In our implementation of the smacof algorithm we minimize stress over
-configurations with \(\eta(X)=1\), or, equivalently,
-\(\sum w_{ij}d_{ij}^2(X)=1\). This means we do not look for \(X\) with
-\(\mathcal{D}\sigma(X)=(V-B(X))X=0\), but we look for solutions of \[
-(V-B(X))X-\lambda VX=0,\\
-\text{tr}\ X'VX= 1.
-\] At the solution \[
-\lambda=1-\rho(X)
-\] and \[
-X = \frac{\Gamma(X)}{\eta(\Gamma(X))}
-\] Also it is necessary for a local minimum that \[
-\Gamma(X)=\rho(X)X
-\] Because the Guttman transform is homogeneous of degree zero this
-implies \[
-\Gamma(\Gamma(X)=\Gamma(X),
-\] so although \(X\) is not a fixed point of the Guttman transform,
-\(\Gamma(X)\) is.
-
-The second order necessary condition is that \[
-H(X)\gtrsim I_p\otimes (\rho(X)V - B(X))
-\] is positive
-
-\subsubsection{Kuhn-Tucker Points}\label{kuhn-tucker-points}
-
-bozo
 
 \section{Smacof Algorithm}\label{smacof-algorithm}
 
@@ -1294,7 +742,7 @@ to plot.
 
 \paragraph{Checking}\label{checking}
 
-\paragraph{Derivatives}\label{derivatives-1}
+\paragraph{Derivatives}\label{derivatives}
 
 \paragraph{Sensitivity}\label{sensitivity}
 
@@ -1325,7 +773,7 @@ After 32 iterations we find a minimum stress of 0.5278528. The Shepardplot in th
 good fit, but strongly suggests making a non-linear transformation to improve the fit.
 
 It is known that if we use \(\delta_{ij}=(1-s_{ij})^3\) then the two-dimensional solution computed by smacof is the
-global minimum of stress for all dimensions \(p\geq 2\) (De Leeuw (2014), De Leeuw (2019a)). So we repeated the metric analysis using the cubic transformation.
+global minimum of stress for all dimensions \(p\geq 2\) (De Leeuw (2014), De Leeuw (2019)). So we repeated the metric analysis using the cubic transformation.
 After 17 iterations we find stress 0.2426954 and the Shepardplot in the right panel of figure \ref{fig:ekmanmetric}. A better fit, and
 the deviations from linearity are what one expects from least squares: overestimation
 of the smaller dissimilarities and underestimation of the larger ones. Nevertheless,
@@ -1350,7 +798,7 @@ the configurations for the two solutions in figure \ref{fig:ekmanmetricconf} are
 \end{greybox}
 
 We present four additional non-metric analyses, using the seven-digit coding
-illustrated in table \ref{tab:ekmankable}. The stress values in the table cannot be compared directly with those of the metric solutions, because in the non-metric analysis the dissimilarities are normalized and thus the stress scale is different. We can compare within the table, however, and compare all Shepard plots.
+illustrated in table \ref{tab:ekmankable}. The stress values in the table cannot be compared directly with those of the metric solutions, because in the non-metric analysis the dissimilarities are normalized and thus the stress scales are different. We can compare within the table, however, and compare all Shepard plots.
 
 \begin{greybox}
 
@@ -1607,9 +1055,6 @@ itel
 
 \phantomsection\label{refs}
 \begin{CSLReferences}{1}{0}
-\bibitem[\citeproctext]{ref-bauschke_bui_wang_18}
-Bauschke, H. H., M. N. Bui, and X. Wang. 2018. {``{Projecting onto the Intersection of a Cone and a Sphere}.''} \emph{SIAM Journal on Optimization} 28: 2158--88.
-
 \bibitem[\citeproctext]{ref-boehning_lindsay_88}
 Böhning, D., and B. G. Lindsay. 1988. {``{Monotonicity of Quadratic-approximation Algorithms}.''} \emph{Annals of the Institute of Statistical Mathematics} 40 (4): 641--63.
 
@@ -1622,14 +1067,8 @@ Bro, R., and S. De Jong. 1997. {``A Fast Non-Negatively-Constrained Least Square
 \bibitem[\citeproctext]{ref-degruijter_67}
 De Gruijter, D. N. M. 1967. {``{The Cognitive Structure of Dutch Political Parties in 1966}.''} Report E019-67. Psychological Institute, University of Leiden.
 
-\bibitem[\citeproctext]{ref-deleeuw_U_75a}
-De Leeuw, J. 1975. {``{A Normalized Cone Regression Approach to Alternating Least Squares Algorithms}.''} Department of Data Theory FSW/RUL.
-
 \bibitem[\citeproctext]{ref-deleeuw_C_77}
----------. 1977. {``Applications of Convex Analysis to Multidimensional Scaling.''} In \emph{Recent Developments in Statistics}, edited by J. R. Barra, F. Brodeau, G. Romier, and B. Van Cutsem, 133--45. Amsterdam, The Netherlands: North Holland Publishing Company.
-
-\bibitem[\citeproctext]{ref-deleeuw_A_84f}
----------. 1984. {``{Differentiability of Kruskal's Stress at a Local Minimum}.''} \emph{Psychometrika} 49: 111--13.
+De Leeuw, J. 1977. {``Applications of Convex Analysis to Multidimensional Scaling.''} In \emph{Recent Developments in Statistics}, edited by J. R. Barra, F. Brodeau, G. Romier, and B. Van Cutsem, 133--45. Amsterdam, The Netherlands: North Holland Publishing Company.
 
 \bibitem[\citeproctext]{ref-deleeuw_C_94c}
 ---------. 1994. {``{Block Relaxation Algorithms in Statistics}.''} In \emph{Information Systems and Data Analysis}, edited by H. H. Bock, W. Lenski, and M. M. Richter, 308--24. Berlin: Springer Verlag. \url{https://jansweb.netlify.app/publication/deleeuw-c-94-c/deleeuw-c-94-c.pdf}.
@@ -1637,20 +1076,8 @@ De Leeuw, J. 1975. {``{A Normalized Cone Regression Approach to Alternating Leas
 \bibitem[\citeproctext]{ref-deleeuw_U_14b}
 ---------. 2014. {``{Bounding, and Sometimes Finding, the Global Minimum in Multidimensional Scaling}.''} UCLA Department of Statistics. \url{https://jansweb.netlify.app/publication/deleeuw-u-14-b/deleeuw-u-14-b.pdf}.
 
-\bibitem[\citeproctext]{ref-deleeuw_E_17q}
----------. 2017a. {``{Pseudo Confidence Regions for MDS}.''} 2017. \url{https://jansweb.netlify.app/publication/deleeuw-e-17-q/deleeuw-e-17-q.pdf}.
-
-\bibitem[\citeproctext]{ref-deleeuw_E_17e}
----------. 2017b. {``{Shepard Non-metric Multidimensional Scaling}.''} 2017. \url{https://jansweb.netlify.app/publication/deleeuw-e-17-e/deleeuw-e-17-e.pdf}.
-
 \bibitem[\citeproctext]{ref-deleeuw_E_19e}
----------. 2019a. {``{Global Minima by Penalized Full-dimensional Scaling}.''} 2019. \url{https://jansweb.netlify.app/publication/deleeuw-e-19-e/deleeuw-e-19-e.pdf}.
-
-\bibitem[\citeproctext]{ref-deleeuw_E_19d}
----------. 2019b. {``Normalized Cone Regression.''} 2019. \url{https://jansweb.netlify.app/publication/deleeuw-e-19-d/deleeuw-e-19-d.pdf}.
-
-\bibitem[\citeproctext]{ref-deleeuw_mair_A_09c}
-De Leeuw, J., and P. Mair. 2009. {``{Multidimensional Scaling Using Majorization: SMACOF in R}.''} \emph{Journal of Statistical Software} 31 (3): 1--30. \url{https://www.jstatsoft.org/article/view/v031i03}.
+---------. 2019. {``{Global Minima by Penalized Full-dimensional Scaling}.''} 2019. \url{https://jansweb.netlify.app/publication/deleeuw-e-19-e/deleeuw-e-19-e.pdf}.
 
 \bibitem[\citeproctext]{ref-dempster_laird_rubin_77}
 Dempster, A. P., N. M. Laird, and D. B. Rubin. 1977. {``{Maximum Likelihood for Incomplete Data via the EM Algorithm}.''} \emph{Journal of the Royal Statistical Society} B39: 1--38.
@@ -1658,41 +1085,17 @@ Dempster, A. P., N. M. Laird, and D. B. Rubin. 1977. {``{Maximum Likelihood for 
 \bibitem[\citeproctext]{ref-ekman_54}
 Ekman, G. 1954. {``{Dimensions of Color Vision}.''} \emph{Journal of Psychology} 38: 467--74.
 
-\bibitem[\citeproctext]{ref-fang_oleary_12}
-Fang, H., and D. P. O'Leary. 2012. {``Euclidean Distance Matrix Completion Problems Euclidean Distance Matrix Completion Problems Euclidean Distance Matrix Completion Problems.''} \emph{Oprtimization Methods and Software} 27 (4-5): 695--717.
-
-\bibitem[\citeproctext]{ref-guttman_68}
-Guttman, L. 1968. {``{A General Nonmetric Technique for Fitting the Smallest Coordinate Space for a Configuration of Points}.''} \emph{Psychometrika} 33: 469--506.
-
-\bibitem[\citeproctext]{ref-kruskal_64a}
-Kruskal, J. B. 1964a. {``{Multidimensional Scaling by Optimizing Goodness of Fit to a Nonmetric Hypothesis}.''} \emph{Psychometrika} 29: 1--27.
-
-\bibitem[\citeproctext]{ref-kruskal_64b}
----------. 1964b. {``{Nonmetric Multidimensional Scaling: a Numerical Method}.''} \emph{Psychometrika} 29: 115--29.
-
-\bibitem[\citeproctext]{ref-kruskal_carroll_69}
-Kruskal, J. B., and J. D. Carroll. 1969. {``{Geometrical Models and Badness of Fit Functions}.''} In \emph{Multivariate Analysis, Volume II}, edited by P. R. Krishnaiah, 639--71. North Holland Publishing Company.
-
 \bibitem[\citeproctext]{ref-lange_16}
 Lange, K. 2016. \emph{MM Optimization Algorithms}. SIAM.
 
 \bibitem[\citeproctext]{ref-lethi_tao_18}
 Le Thi, H. A., and P. D. Tao. 2018. {``{DC Programming and DCA: Thirty Years of Developments}.''} \emph{Mathematical Programming, Series B}.
 
-\bibitem[\citeproctext]{ref-mair_groenen_deleeuw_A_22}
-Mair, P., P. J. F. Groenen, and J. De Leeuw. 2022. {``{More on Multidimensional Scaling in R: smacof Version 2}.''} \emph{Journal of Statistical Software} 102 (10): 1--47. \url{https://www.jstatsoft.org/article/view/v102i10}.
-
 \bibitem[\citeproctext]{ref-mullen_vanstokkum_23}
 Mullen, K. M., and I. H. M. van Stokkum. 2023. \emph{{nnls: The Lawson-Hanson algorithm for non-negative least squares (NNLS)}}. \url{\%7Bhttps://CRAN.R-project.org/package=nnls\%7D}.
 
 \bibitem[\citeproctext]{ref-nikolova_ng_05}
 Niikolova, M., and M. Ng. 2005. {``Analysis of Half-Quadratic Minimization Methods for Signal and Image Recovery.''} \emph{SIAM Journal Scientific Computing} 27 (3): 937--66.
-
-\bibitem[\citeproctext]{ref-shepard_62a}
-Shepard, R. N. 1962a. {``{The Analysis of Proximities: Multidimensional Scaling with an Unknown Distance Function. I}.''} \emph{Psychometrika} 27: 125--40.
-
-\bibitem[\citeproctext]{ref-shepard_62b}
----------. 1962b. {``{The Analysis of Proximities: Multidimensional Scaling with an Unknown Distance Function. II}.''} \emph{Psychometrika} 27: 219--46.
 
 \bibitem[\citeproctext]{ref-vosz_eckhardt_80}
 Vosz, H., and U. Eckhardt. 1980. {``{Linear Convergence of Generalized {W}eiszfeld's Method}.''} \emph{Computing} 25: 243--51.
